css/styles.css
:root {
  --header-height: 4rem;
  --font-type: sans-serif;
}

* {
  box-sizing: border-box;
}

body {
  --primary-bg-color: #eee;
  --primary-text-color: #222;
  --secondary-bg-color: #666;
  --secondary-text-color: #eee;
  --form-bg-color: #ddd;

  margin: 0;
  background-color: var(--primary-bg-color);
  font-family: var(--font-type);
  max-width: 100vw;
}

body.dark-theme {
  --primary-bg-color: #222;
  --primary-text-color: #bbb;
  --secondary-bg-color: #333;
  --secondary-text-color: #aaa;
  --form-bg-color: #151515;
}

body.black-theme {
  --primary-bg-color: #000;
  --primary-text-color: #aaa;
  --secondary-bg-color: #000;
  --secondary-text-color: #777;
  --form-bg-color: #000;
}

body.black-theme button {
  border-color: var(--secondary-text-color);
}

header {
  height: var(--header-height);
  width: 100vw;
  background-color: var(--secondary-bg-color);
  color: var(--secondary-text-color);
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-left: 1rem;
}

header > h2 {
  text-shadow: 0 0 0.25rem black;
}

#settings-toggle {
  align-self: stretch;
  width: var(--header-height);
  display: flex;
  justify-content: center;
  align-items: center;
}

#settings-toggle > img {
  width: 60%;
  height: 60%;
  opacity: 0.7;
  transition: transform 200ms ease, opacity 200ms ease;
  pointer-events: none;
}

#settings-toggle.open > img {
  transform: rotate(45deg);
  opacity: 1;
}

menu {
  position: absolute;
  top: var(--header-height);
  width: 100%;
  list-style-type: none;
  background-color: var(--secondary-bg-color);
  color: var(--secondary-text-color);
  margin: 0;
  padding: 2rem;
  font-size: 1.25rem;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  gap: 2rem;
  transform-origin: top;
  transform: scaleY(0);
  transition: transform 200ms ease;
  z-index: 1;
}

menu.open {
  transform: none;
}

select {
  font-size: 1.15rem;
  padding: 0.5rem 1rem;
  text-transform: capitalize;
  width: 8rem;
  background-color: var(--primary-bg-color);
  color: var(--primary-text-color);
}

button {
  background-color: var(--form-bg-color);
  color: var(--form-text-color);
}

menu select {
  width: 10rem;
}

.form-row > select {
  padding: 0.5rem;
}

menu > li {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

main {
  background-color: var(--primary-bg-color);
  color: var(--primary-text-color);
}

#intro {
  padding: 1.5rem;
  line-height: 140%;
}

form, #results-area {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  transition: opacity 100ms ease;
}

form.hidden, #results-area.hidden {
  opacity: 0;
  pointer-events: none;
}

form > button, #results-area > button {
  margin: 2rem;
  padding: 1rem;
  font-size: 1.25rem;
}

.form-row {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;
  background-color: var(--form-bg-color);
  border-top: 0.25rem solid #00000044;
}

.form-row:last-child {
  border-bottom: 0.25rem solid #00000044;
}

.form-row > p {
  padding-right: 1rem;
}

.toggle {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 6rem;
  height: 3rem;
}

.toggle-groove {
  width: 4rem;
  height: 1rem;
  background-color: #88888855;
  border-radius: 1rem;
  pointer-events: none;
}

.toggle-knob {
  position: absolute;
  width: 2.5rem;
  height: 2.5rem;
  border-radius: 50%;
  background-color: var(--primary-text-color);
  background-color: red;
  transform: translateX(-55%);
  display: flex;
  justify-content: center;
  align-items: center;
  pointer-events: none;
  transition: transform 200ms ease, background-color 200ms ease;
}

.toggle-knob::after {
  content: "NO";
  position: absolute;
  color: white;
  line-height: 0;
  font-size: 0.9rem;
}

.toggle.yes > .toggle-knob {
  background-color: green;
  transform: translateX(55%);
}

.toggle.yes > .toggle-knob::after {
  content: "YES";
}

#results-area {
  position: absolute;
  top: var(--header-height);
  text-align: center;
}

#results-area > h1 {
  animation: bob 700ms ease 0ms infinite alternate;
}

#result-image-area > img {
  max-height: 15rem;
  max-width: 100%;
}

#winning-message {
  background-color: #33333333;
  padding: 1rem;
  margin: 1rem;
  border-radius: 1rem;
}

@media screen and (orientation: landscape) and (min-width: 480px) {
  body {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    overflow-x: hidden;
  }

  header {
    padding-left: 2rem;
  }

  main {
    max-width: 640px;
    border: 1rem solid rgba(0, 0, 0, 0.256);
    border-width: 0 1rem 0 1rem;
  }

  select {
    width: 12rem;
  }

  #form-area {
    display: flex;
    justify-content: center;
  }

  #results-area {
    max-width: 640px;
  }
  
  menu {
    transform: none;
    position: absolute;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    width: 60vw;
    height: var(--header-height);
    top: 0;
    right: 0;
  }

  menu label {
    width: max-content;
  }

  menu label, menu > li {
    margin-right: 1rem;
  }

  #settings-toggle {
    display: none;
  }
}

@keyframes bob {
  from {
    transform: scale(90%);
  }

  to {
    transform: scale(100%);
  }
}

